# ChangeLog for dev-util/subversion
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/ChangeLog,v 1.343 2008/11/25 14:25:32 armin76 Exp $

  25 Nov 2008; Raúl Porcel <armin76@gentoo.org> subversion-1.5.4.ebuild:
  alpha/arm/ia64 stable wrt #247072

  22 Nov 2008; Markus Meier <maekke@gentoo.org> subversion-1.5.4.ebuild:
  amd64/x86 stable, bug #247072

  21 Nov 2008; Ferris McCormick <fmccor@gentoo.org> subversion-1.5.4.ebuild:
  Sparc stable --- Bug #247072 --- looks good to me.

  21 Nov 2008; Jeroen Roovers <jer@gentoo.org> subversion-1.5.4.ebuild:
  Stable for HPPA (bug #247072).

  20 Nov 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  subversion-1.5.4.ebuild:
  ppc stable, bug #247072

  20 Nov 2008; Brent Baude <ranger@gentoo.org> subversion-1.5.4.ebuild:
  stable ppc64, bug 247072

  16 Nov 2008; Benedikt Böhm <hollow@gentoo.org> -subversion-1.4.5.ebuild,
  -subversion-1.5.1.ebuild, subversion-1.5.4.ebuild:
  fix #238347; cleanup

  12 Nov 2008; Peter Volkov <pva@gentoo.org> subversion-1.5.4.ebuild:
  ~mips keyword back, bug #212056.

  04 Nov 2008; Mike Frysinger <vapier@gentoo.org> subversion-1.5.1.ebuild,
  subversion-1.5.2.ebuild, subversion-1.5.4.ebuild:
  Add back arm/s390/sh keywords.

  01 Nov 2008; Jose Luis Rivero <yoswink@gentoo.org>
  subversion-1.5.2.ebuild:
  alpha stable wrt bug #241584

*subversion-1.5.4 (25 Oct 2008)

  25 Oct 2008; Benedikt Böhm <hollow@gentoo.org>
  -files/1.5.0/http-library.patch, -subversion-1.5.0.ebuild,
  +subversion-1.5.4.ebuild:
  version bump wrt #241398, fixes emacs support wrt #237528

  18 Oct 2008; Raúl Porcel <armin76@gentoo.org> subversion-1.5.2.ebuild:
  ia64 stable wrt #241584

  16 Oct 2008; Markus Meier <maekke@gentoo.org> subversion-1.5.2.ebuild:
  x86 stable, bug #241584

  15 Oct 2008; Jeroen Roovers <jer@gentoo.org> subversion-1.5.2.ebuild:
  Stable for HPPA (bug #241584).

  15 Oct 2008; Friedrich Oslage <bluebird@gentoo.org>