@@ -20,10 +20,10 @@ AUX svnserve.initd 817 RMD160 59f4e8e983d4595b7c27615889a9c0809d015a18 SHA1 483b
 AUX svnserve.xinetd 332 RMD160 c2fc4eb02da7e7405756fce650b8897f0a9da7f7 SHA1 d7d478fc257a40626888f9b12ee218df55dac570 SHA256 267f30c78ef6428aeeb97d3c64c06b9acfba4bc624766fc3c6a6d2c4133799a2
 AUX vc-svn.el 16847 RMD160 8665b9a34c8fd9acae40e18aac33026aff3a39d7 SHA1 4d1a5a9331ff96e943244a6d5538e4f0abeac9e7 SHA256 b4979d5df9fba02dbc8ad71d813229222e95ee1e8e89dec3060611d2d6be87aa
 DIST subversion-1.4.6.tar.bz2 4680316 RMD160 ae63877b5d0eeb1c4f28c4388f97897efde7244c SHA1 a9c941e2309744f6a2986200698b60da057a7527 SHA256 6c480c3493b25c4b73fa62d5fef2f8dd40dde1eb1294c53d3495d864230fc124
-DIST subversion-1.5.2.tar.bz2 4902078 RMD160 09cf131f059edc313738d754c7b58e4e6f1cec2f SHA1 b44862309d433e93ce0e422137047ca4a2b52403 SHA256 7c4c439035cd75722fa3da27433e2c3a4a2dc88694982a5ceb1ce5169982c7f5
 DIST subversion-1.5.4.tar.bz2 4925141 RMD160 521cd35602a637dba77864926e7636c08e54f3d7 SHA1 0bebb7029fcf3c0638206c22a1ba9526121e4365 SHA256 e24b6257b53988287471f83689846018e8e7b1e1c713da2567ab57b99e45fb40
+DIST subversion-1.5.5.tar.bz2 4940482 RMD160 6400e387b3505180206b61729cb0b11baeae70d3 SHA1 61c9a7209ccef8eff3c0499629d62ed4d3c89988 SHA256 88cf24ba5d589351791709ff7556ababc019ec59f3240ac2087dacabb9ad77be
 EBUILD subversion-1.4.6-r2.ebuild 14685 RMD160 e491212be5af221e654468ae072aa34e953d6258 SHA1 8f052e75a53c28e83dc89228ca0f1e88f53d3f3e SHA256 715b6403918e2e02c9c244ae1c7ed6a07c1aa3e37183d55d58f6475acb11ad5d
-EBUILD subversion-1.5.2.ebuild 13325 RMD160 66338f59cf00eba8b3050c741f5fb50ca466d1c5 SHA1 30a1b17606da593c3a4f96c60266b138c0123bed SHA256 61ad5740b23ea2958abd81b512e65393288c807a8810efae6db4d9c8e09051d7
-EBUILD subversion-1.5.4.ebuild 13972 RMD160 898143134ed721461b58d1c98ab0fd3493299310 SHA1 f84779f51f765fc37c01ef971f18467b3ece3526 SHA256 d2e5ed3985fb6e6ba832bf3bc0d13da89a82872560425dc65e5857dd97013d3b
-MISC ChangeLog 57704 RMD160 86192139c026e16488ed8a6cfc52c939e524c382 SHA1 e95912924b037b0693320506fcb5fea5695de603 SHA256 1c896d4fecb87789eef0e34ffe69feedc21456a4a008488e87c02e2dd7822ba3
+EBUILD subversion-1.5.4.ebuild 13972 RMD160 827001829853dc7a1c363e751cb6e7c225eacaca SHA1 a2c88f24df1785fb14a367bd7bdf207a425bf07e SHA256 4c7b390614034e37c9b79d05ffb71aac175343b7ec6913917f05f03e33a60208
+EBUILD subversion-1.5.5.ebuild 13971 RMD160 b3299c11cb8bb262c8598630ca31e3173364a86e SHA1 26fa073c5000fc024fbbfdcd0ca117a898a4bebe SHA256 bc8d8b623ab88547f7fe12baaa2abb674587fac4fc7ffc0772c0eb8363d0d1bc
+MISC ChangeLog 57868 RMD160 c8abe3586a8adc7f1199e7c1ac270de92a538f11 SHA1 91b9ecbe28261fb2d4479aec59988795ad07d24f SHA256 2d2ea4398535a66cc157554d2767e9092bbd573b0df41db3be4ad6455ffa0b21
 MISC metadata.xml 958 RMD160 9e4aa5a4dfeef1a81c20121e8e75baf45d0962ca SHA1 c8844225273473a569cefae106533215961c287f SHA256 396a72dd2fddb8fb146ce87fa05692ab9f7d183057c0940d9365f88602a03dc7
